# PythonTools

./: .gitignore  .pre-commit-config.yaml  .python-version  LICENSE  README.md  coverage.xml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: allure.yaml  allure.yml  python-package.yml
docs/: idutils.md
pythontools/: __init__.py
pythontools/collection/: __init__.py  collectionutil.py  collectionutils.py  utils.py
pythontools/component/: __init__.py  basic_utils.py  basicutils.py  constant.py  convertor.py  decorator.py  idutils.py  imgutils.py  osutils.py  pattern_pool.py  reutils.py  sequenceutils.py  validator.py
pythontools/component/constants/: color_constant.py
pythontools/compress/: zip.py
pythontools/config/: config.py
pythontools/core/: __init__.py  __typing.py  basicutils.py  convertor.py  decorator.py  desensitizedUtils.py  errors.py  exception_util.py  idutils.py  imgutils.py  log.py  osutils.py  pattern_pool.py  phoneutils.py  reutils.py  typehint.py  typeutils.py
pythontools/core/compress/: zip.py  (+1 more)
pythontools/date/: period.py  relativedelta.py  zodiac.py
pythontools/io/: fileutils.py
pythontools/text/: passwd.py  strjoiner.py
tests/: __init__.py  basic_test.py  boolean_util_test.py  collection_test.py  collection_util_test.py  constant_test.py  context.py  context_test.py  convertor_test.py  datetime_format_test.py  datetime_util_test.py  datetime_validator_test.py  decorator_test.py  desensitized_util_test.py  encoding_test.py  file_util_test.py  idcard_util_test.py  log_test.py  radix_util_test.py  random_util_test.py  re_util_test.py  sequence_test.py  string_util_test.py  string_validator_test.py  sys_util_test.py  test_basic.py  test_constant.py  test_decorator.py  test_encoding.py  test_security.py  test_text.py  test_utils.py  text_test.py  type_util_test.py  utils_test.py
tests/resources/: test_csv.csv
(+83 files in other folders)
